# blueos-opticalflow

./: Dockerfile  README.md
app/: image_capture.py  main.py  mavlink_interface.py  optflow_lkt.py  pyproject.toml  settings.py
app/static/: index.html  register_service
